--- a/viking_store/index.html
+++ b/viking_store/index.html
@@ -25,43 +25,65 @@
 
     <section class="items">
       <ul class="ul">
-        <li class="item-entry col-1-3">
-          <div class="itemName">The Silent Night</div>
-          <div class="itemImage"><img src="axe_silent_night_small.jpg" /></div>
+        <li class="item-entry column-left">
+          <div class="itemName">
+            <h3>The Silent Night<h3>
+            <div class="itemPrice">$100</div>
+          </div>
+          <div class="itemImage">
+            <img src="axe_silent_night_small.jpg" />
+          </div>
+
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
           </div>
         </li>
-        <li class="item-entry col-1-3">
-          <div class="itemName">The Dainty Daisy</div>
+        <li class="item-entry column-center">
+          <div class="itemName">
+            <h3>The Dainty Daisy</h3>
+            <div class="itemPrice">$100</div>
+          </div>
+
           <div class="itemImage"><img src="axe_dainty_daisy_small.jpg" /></div>
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
           </div>
         </li>
-        <li class="item-entry col-1-3">
-          <div class="itemName">Double Trouble</div>
+        <li class="item-entry column-right">
+          <div class="itemName">
+            <h3>Double Trouble</h3>
+            <div class="itemPrice">$100</div>
+          </div>
           <div class="itemImage"><img src="axe_double_trouble_small.jpg" /></div>
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
           </div>
         </li>
-        <li class="item-entry col-1-3">
-          <div class="itemName">Wispering wind</div>
+        <li class="item-entry column-left">
+          <div class="itemName">
+            <h3>Wispering wind</h3>
+            <div class="itemPrice">$100</div>
+          </div>
           <div class="itemImage"><img src="axe_whispering_wind_small.jpg" /></div>
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
           </div>
         </li>
-        <li class="item-entry col-1-3">
-          <div class="itemName">The Cunning Cutter</div>
+        <li class="item-entry column-center">
+          <div class="itemName">
+            <h3>The Cunning Cutter</h3>
+            <div class="itemPrice">$100</div>
+          </div>
           <div class="itemImage"><img src="axe_cunning_cutter_small.jpg" /></div>
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
           </div>
         </li>
-        <li class="item-entry col-1-3">
-          <div class="itemName">The Kingmaker</div>
+        <li class="item-entry column-right">
+          <div class="itemName">
+            <h3>The Kingmaker</h3>
+            <div class="itemPrice">$100</div>
+          </div>
           <div class="itemImage"><img src="axe_kingmaker_small.jpg" /></div>
           <div class="addtocart-container">
             <div class="addtocart-button">Add to Cart</div>
